src/objects/Payment_API_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>This setting is no longer used.  Please enter credentials on the Payment Processors tab.</description>
    <fields>
        <fullName>Default_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to use this connection by default when there are multiple connections available.</inlineHelpText>
        <label>Default Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_Id__c</fullName>
        <inlineHelpText>To obtain Paypal API Credentials, log in to www.paypal.com</inlineHelpText>
        <label>API Login ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <inlineHelpText>To obtain Paypal API Credentials, log in to www.paypal.com</inlineHelpText>
        <label>API Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor__c</fullName>
        <inlineHelpText>Payment processor, such as Paypal or Authorize.net</inlineHelpText>
        <label>Payment Processor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box for test accounts so they will log into the Sandbox URL for API access.  If this option is not set properly, your API login will fail.</inlineHelpText>
        <label>Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <inlineHelpText>To obtain Paypal API Credentials, log in to www.paypal.com</inlineHelpText>
        <label>API Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Payment API Config - DEPRECATED</label>
</CustomObject>